--- a/src/GUI/Admin.fxml
+++ b/src/GUI/Admin.fxml
@@ -2,43 +2,47 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="407.0" prefWidth="624.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI_imp.Adminimp">
+<AnchorPane prefHeight="407.0" prefWidth="624.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Admin">
    <children>
       <VBox layoutX="14.0" layoutY="74.0" prefHeight="260.0" prefWidth="120.0">
          <children>
-            <MenuButton alignment="CENTER" layoutX="10.0" layoutY="40.0" mnemonicParsing="false" popupSide="RIGHT" prefHeight="69.0" prefWidth="97.0" text="Coaches" textAlignment="CENTER">
+            <MenuButton id="1" fx:id="Coaches_Button" alignment="CENTER" layoutX="10.0" layoutY="40.0" mnemonicParsing="false" popupSide="RIGHT" prefHeight="69.0" prefWidth="97.0" text="Coaches" textAlignment="CENTER">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Add Coach" />
-                  <MenuItem mnemonicParsing="false" text="See Coaches" />
+                  <MenuItem id="1.1" fx:id="See_Coaches_Button" mnemonicParsing="false" onAction="#Add_CoaChes_method" text="See Coaches" />
+                  <MenuItem id="1.2" fx:id="Add_CoaChes_Button" mnemonicParsing="false" onAction="#Add_CoaChes_method" text="Add Coach" />
                </items>
                <VBox.margin>
                   <Insets bottom="30.0" top="30.0" />
                </VBox.margin>
             </MenuButton>
-            <MenuButton alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" popupSide="RIGHT" prefHeight="69.0" prefWidth="97.0" text="Members" textAlignment="CENTER">
+            <MenuButton id="2" alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" popupSide="RIGHT" prefHeight="69.0" prefWidth="97.0" text="Members" textAlignment="CENTER">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Action 1" />
-                  <MenuItem mnemonicParsing="false" text="Action 2" />
+                  <MenuItem id="2.1" mnemonicParsing="false" text="See Members" />
+                  <MenuItem id="2.2" mnemonicParsing="false" text="Add Members" />
                </items>
             </MenuButton>
-            <MenuButton alignment="CENTER" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" popupSide="RIGHT" prefHeight="69.0" prefWidth="97.0" text="Bills" textAlignment="CENTER">
+            <MenuButton id="3" alignment="CENTER" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" popupSide="RIGHT" prefHeight="69.0" prefWidth="97.0" text="Bills" textAlignment="CENTER">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Action 1" />
-                  <MenuItem mnemonicParsing="false" text="Action 2" />
+                  <MenuItem id="3.1" mnemonicParsing="false" text="Action 1" />
+                  <MenuItem id="3.2" mnemonicParsing="false" text="Action 2" />
                </items>
                <VBox.margin>
                   <Insets bottom="30.0" top="30.0" />
                </VBox.margin>
             </MenuButton>
-             <Button alignment="CENTER" layoutX="10.0" layoutY="194.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="97.0" text="Setting" textAlignment="CENTER">
+             <Button id="4" alignment="CENTER" layoutX="10.0" layoutY="194.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="97.0" text="Setting" textAlignment="CENTER">
             </Button>
 
          </children>
@@ -46,11 +50,28 @@
       </VBox>
       <Pane layoutX="162.0" layoutY="31.0" prefHeight="346.0" prefWidth="430.0">
          <children>
-            <Pane id="See_Coaches" layoutX="10.0" layoutY="9.0" prefHeight="329.0" prefWidth="412.0">
+            <Pane id="See_Coaches" fx:id="See_Coaches_Pane" layoutX="10.0" layoutY="9.0" prefHeight="329.0" prefWidth="412.0" visible="false">
                <children>
-                  <ListView layoutX="14.0" layoutY="56.0" prefHeight="260.0" prefWidth="384.0" />
+                  <TableView id="1.1.1" layoutX="14.0" layoutY="56.0" prefHeight="260.0" prefWidth="370.0">
+                    <columns>
+                      <TableColumn prefWidth="167.0" text="Name" />
+                      <TableColumn prefWidth="101.0" text="ID" />
+                        <TableColumn minWidth="0.0" prefWidth="101.0" text="Gender " />
+                    </columns>
+                  </TableView>
+                  <ScrollBar layoutX="384.0" layoutY="56.0" orientation="VERTICAL" prefHeight="260.0" prefWidth="14.0" />
                   <TextField layoutX="14.0" layoutY="24.0" prefHeight="25.0" prefWidth="302.0" promptText="ID" />
                   <Button layoutX="326.0" layoutY="24.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Search" />
+               </children>
+            </Pane>
+            <Pane id="1.2.1" fx:id="Add_Coaches_Pane" prefHeight="346.0" prefWidth="430.0">
+               <children>
+                  <TextField layoutX="14.0" layoutY="53.0" promptText="First name" />
+                  <TextField layoutX="201.0" layoutY="53.0" promptText="Last name" />
+                  <TextField layoutX="14.0" layoutY="110.0" promptText="Salary " />
+                  <PasswordField layoutX="14.0" layoutY="198.0" promptText="Re-Enter Password" />
+                  <PasswordField layoutX="14.0" layoutY="154.0" promptText="Password" />
+                  <ComboBox fx:id="Gender" layoutX="200.0" layoutY="110.0" prefWidth="150.0" promptText="Gender" visibleRowCount="2" />
                </children>
             </Pane>
          </children>
