--- a/src/GUI/Login.fxml
+++ b/src/GUI/Login.fxml
@@ -30,8 +30,8 @@
                     <GridPane.margin>
                         <Insets left="120.0" />
                     </GridPane.margin></Label>
-                <PasswordField GridPane.rowIndex="2" />
-                <TextField promptText="ID" text="Password" GridPane.rowIndex="1" />
+                <PasswordField promptText="Password" GridPane.rowIndex="2" />
+                <TextField promptText="ID" GridPane.rowIndex="1" />
                 <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Login" GridPane.columnSpan="2" GridPane.rowIndex="3">
                     <GridPane.margin>
                         <Insets left="80.0" />
